--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello, World!</h1>
+<html>
+    <head>
+        <title>Bethan and Edward's Wedding</title>
+    </head>
+    <body>
+        <h1>Bethan and Edward's Wedding</h1>
+        <p>Hello Bethan, welcome to a website</p>
+    </body>
+</html>
