--- a/day.html
+++ b/day.html
@@ -1,1 +1,58 @@
-<h1>Welcome special day guest</h1>
+<html>
+    <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+
+        <!--style>
+        body {
+            background: url("images/background.png") no-repeat center center fixed;
+            background-size: cover;
+        }
+        </style--!>
+
+        <script>
+
+            const emailRegex = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+
+            function handleKeydown() {
+                if(event.key === 'Enter') {
+                    handleSubmit();
+                }
+            }
+
+            function handleSubmit() {
+                const email = document.getElementById('email').value;
+
+                if (!emailRegex.exec(email)) {
+                    alert("That is probably not a valid email. Please try another");
+                    return;
+                }
+                
+                if (email === "edderick@live.co.uk")
+                {
+                    window.location.href = './day_rsvp_existing.html';
+                }
+                else {
+                    window.location.href = './day_rsvp_new.html';
+                }
+            }
+        </script>
+            
+
+        <title>Edward and Bethan's Wedding</title>
+    </head>
+    <body>
+        <div class="text-center">
+            <div class="container">
+                <h1>Edward &amp; Bethan's Wedding</h1>
+                <p>Corny text about the wedding</p>
+            </div>
+            <div class="container">
+                <h2>RSPV</h2>
+                <p>Please let us know if you can attend by Thursday 31st May 2018</p>
+                Your E-Mail: 
+                <input id="email" type="text" onkeydown="handleKeydown()"/> 
+                <input type="submit" onclick="handleSubmit()" value="&lt;Go&gt;"/>
+            </div>
+        </div>
+    </body>
+</html>
