--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <style>
             .vertical{
-                margin-top:40%;
+                margin-top:40vh;
             }
         </style>
 
