Don't remember what I added, but I'm not at work so I can do what I want

--- a/day.html
+++ b/day.html
@@ -44,15 +44,35 @@
         <div class="text-center">
             <div class="container">
                 <h1>Edward &amp; Bethan's Wedding</h1>
-                <p>Corny text about the wedding</p>
+                <h2>Saturday 11th August 2018</h2>
             </div>
             <div class="container">
                 <h2>RSPV</h2>
                 <p>Please let us know if you can attend by Thursday 31st May 2018</p>
-                Your E-Mail: 
-                <input id="email" type="text" onkeydown="handleKeydown()"/> 
-                <input type="submit" onclick="handleSubmit()" value="&lt;Go&gt;"/>
+                <p>Your E-Mail: 
+                    <input id="email" type="text" onkeydown="handleKeydown()"/> 
+                    <input type="submit" onclick="handleSubmit()" value="&lt;Go&gt;"/>
+                </p>
             </div>
+            <div class="container">
+                <h2>Ceremony</h2>
+                    <h3>St Phillip's Church, Maidstone</h3>
+                    <p>Arrive at 12:30 to be seated by 12:45</p>
+            </div>
+            <div class="container">
+                <h2>Reception</h2>
+                    <h3>Windy Ridge, Offham</h3>
+                    <p>15:00 till Late</p>
+            </div>
+            <div class="container">
+                <h2>Gifts</h2>
+                <p>
+                    As we have lived together for 2 years and are planning on
+                    living abroad in the near future, we do not need any physical gifts. Your
+                    presence at our day is the most important thing to us. However, if you would
+                    like to give a gift, we would be extremely appreciative of any donations
+                    towards our honeymoon or a future house deposit.
+                </p>
         </div>
     </body>
 </html>
