--- a/evening_rsvp_new.html
+++ b/evening_rsvp_new.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>RSVP for Bethan and Edward's Wedding</title>
+        <title>RSVP for Bethan and Edward's Wedding Reception</title>
     </head>
     <body>
         <h1>RSVP for email@address.com</h1>
@@ -37,7 +37,7 @@
                     <option value="true">Yes</option>
                     <option value="false">No</option>
                 </select>
-                <a href="#">(See Menu)</a>
+                <a href="#">(See Pizza Menu)</a>
             </p>
             <p>
                 Please describe dietarty requirements: 
@@ -62,7 +62,7 @@
                     <option value="true">Yes</option>
                     <option value="false">No</option>
                 </select>
-                <a href="#">(See Menu)</a>
+                <a href="#">(See Pizza Menu)</a>
             </p>
             <p>
                 Please describe dietarty requirements: 
