--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                    window.location.href = "./day.html";
                 }
                 else if (password === "evening") {
-                   window.location.href = "./day.html";
+                   window.location.href = "./evening.html";
                 }
                 else {
                     alert("Incorrect password, try again or contact Edward or Bethan!");
