--- a/evening.html
+++ b/evening.html
@@ -1,1 +1,73 @@
-<h1>Welcome just as special evening guest</h1>
+<html>
+    <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+
+        <!--style>
+        body {
+            background: url("images/background.png") no-repeat center center fixed;
+            background-size: cover;
+        }
+        </style--!>
+
+        <script>
+
+            const emailRegex = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+
+            function handleKeydown() {
+                if(event.key === 'Enter') {
+                    handleSubmit();
+                }
+            }
+
+            function handleSubmit() {
+                const email = document.getElementById('email').value;
+
+                if (!emailRegex.exec(email)) {
+                    alert("That is probably not a valid email. Please try another");
+                    return;
+                }
+                
+                if (email === "edderick@live.co.uk")
+                {
+                    window.location.href = './evening_rsvp_existing.html';
+                }
+                else {
+                    window.location.href = './evening_rsvp_new.html';
+                }
+            }
+        </script>
+            
+
+        <title>Edward and Bethan's Wedding Reception</title>
+    </head>
+    <body>
+        <div class="text-center">
+            <div class="container">
+                <h1>Edward &amp; Bethan's Wedding Recpeption</h1>
+                <h2>Saturday 11th August 2018</h2>
+            </div>
+            <div class="container">
+                <h2>RSPV</h2>
+                <p>Please let us know if you can attend by Tuesday 31st July 2018</p>
+                <p>Your E-Mail: 
+                    <input id="email" type="text" onkeydown="handleKeydown()"/> 
+                    <input type="submit" onclick="handleSubmit()" value="&lt;Go&gt;"/>
+                </p>
+            </div>
+            <div class="container">
+                <h2>Reception</h2>
+                    <h3>Windy Ridge, Offham</h3>
+                    <p>19:30 till Late</p>
+            </div>
+            <div class="container">
+                <h2>Gifts</h2>
+                <p>
+                    As we have lived together for 2 years and are planning on
+                    living abroad in the near future, we do not need any physical gifts. Your
+                    presence at our day is the most important thing to us. However, if you would
+                    like to give a gift, we would be extremely appreciative of any donations
+                    towards our honeymoon or a future house deposit.
+                </p>
+        </div>
+    </body>
+</html>
