--- a/evening_rsvp_existing.html
+++ b/evening_rsvp_existing.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>RSVP for Bethan and Edward's Wedding</title>
+        <title>RSVP for Bethan and Edward's Wedding Reception</title>
     </head>
     <body>
         <h1>RSVP for email@address.com</h1>
