--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <html>
     <head>
-        <link rel="stylesheet" 
-              href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
-              integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
-              crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 
         <style>
+            body {
+                background: url("images/background.png") no-repeat center center fixed;
+                background-size: cover;
+            }
+
             .vertical{
-                margin-top:40vh;
+                margin-top:25vh;
+            }
+
+            .transparent{
+                  background:rgba(255,255,255,0.6);
+                  padding-top:5vh;
+                  padding-bottom:5vh;
             }
         </style>
 
         <title>Bethan and Edward's Wedding</title>
         <script>
-            function handleKeydown() {
-                if(event.key === 'Enter') {
-                    handleSubmit();
-                }
-            }
-
             function handleSubmit() {
-                const password = document.getElementById('password').value.toLowerCase();
+                const password = document.getElementById('password').value.toLowerCase().trim();
 
                 if (password === "day") {
                    window.location.href = "./day.html";
@@ -36,10 +39,17 @@
     </head>
     <body>
         <div class="text-center vertical">
-            <h1>Bethan and Edward's Wedding</h1>
-            <p>Please enter the password from your invite</p>
-            <input id="password" type="text" onkeydown="handleKeydown()"/>
-            <input type="submit" value="&lt;Go&gt;" onclick="handleSubmit()"/>
+            <div class="transparent">
+                <h1>Bethan and Edward's Wedding</h1>
+                <h4>Please enter the password from your invite</h4>
+                <form class="form-inline" action="javascript:void(0);">
+                <div class="form-group">
+                    <input id="password" type="text" class="form-control" type="text"/>
+                   
+                    <button onclick="handleSubmit()" class="btn btn-primary">&lt;Go&gt;</button>
+                </div>
+                </form>
+            </div>
         </div>
     </body>
 </html>
