Add a picture of kent

--- a/evening.html
+++ b/evening.html
@@ -2,12 +2,20 @@
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-        <!--style>
+        <style>
         body {
-            background: url("images/background.png") no-repeat center center fixed;
-            background-size: cover;
+            background-color: rgb(250,250,250) 
         }
-        </style--!>
+        .footer {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            text-align: center;
+            z-index: -1;
+        }
+
+        </style>
 
         <script>
 
@@ -68,6 +76,12 @@
                     like to give a gift, we would be extremely appreciative of any donations
                     towards our honeymoon or a future house deposit.
                 </p>
+            </div>
+            
         </div>
+        <div class="footer">
+            <img width="100%"src='images/welcome.jpg'/>
+        </div>
+
     </body>
 </html>
