--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="text-center vertical">
             <div class="transparent">
                 <h1>Bethan and Edward's Wedding</h1>
+                <h3>Saturday 11th August 2018</h3>
                 <h4>Please enter the password from your invite</h4>
                 <form class="form-inline" action="javascript:void(0);">
                 <div class="form-group">
